added images, updated swagger file
